--- a/main.html
+++ b/main.html
@@ -128,9 +128,11 @@
 
     <h1>Video Explicatiu</h1>
     <p>Aquí pots trobar un vídeo explicatiu sobre el tema:</p>
-    <p>(aquest video apart de explicatiu tambe conte petites bromes per que la explicacio sigui mes amena)</p>
+    <p>(aquest video apart de explicatiu tambe conte bromes per que la explicacio sigui mes amena)</p>
+    
     <div class="video-container">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/TU-GRNEsbUk" frameborder="0" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/watch?v=MV_nBLy4EDw" frameborder="0" allowfullscreen></iframe>
     </div>
+    <p>link: https://www.youtube.com/watch?v=MV_nBLy4EDw</p>
 </body>
 </html>
